# agent3d

./: .agent3d  .agent3d-config.yml  .agent3d-config.yml.backup  .editorconfig  .gitignore  .markdownlint.yaml  AGENT-GUIDELINE.md  AGENT-GUIDELINES-MCP.md  AGENT-GUIDELINES.md  AGENT-GUIDELINES.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analyze_db_memory.py  api.py  check_dependencies.py  ddd-pass.sh  demo_vector_orchestrator.py  demo_vector_search.py  demo_working_search.py  fibonacci.py  fix_sentence_transformers.py  mcp.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements-vector-db.txt  run_full_ddd_pass.py  test_env_loading.py  test_gemini_integration.py  test_mcp.sh  test_token_usage.json  test_vector_db_simple.py
designs/: ddd-id-detection-flow.md
docs/: ACCEPTANCE-CRITERIA.md  ADVANCED-FEATURES.md  AGENT3D-CONFIG-TEMPLATE-GUIDE.md  AGENT3D-MCP-REFACTOR-SUMMARY.md  AGENT3D-MCP-REFACTORING.md  AGENT3D-MCP-SERVER.md  ARCHITECTURE.md  BUSINESS-OBJECTIVES.md  CODE-LOCATION-FIELD.md  COMMON-PROCEDURES.md  CONFIGURATION-GUIDE.md  DDD-GLOSSARY.md  DDD-STATUS.md  DDD-STATUS.yml  DEPLOYMENT.md  DUAL-FORMAT-STRATEGY.md  ENHANCED-ORCHESTRATOR-SUMMARY.md  FEATURES.md  GEMINI-INTEGRATION.md  GITHUB-CLI-INTEGRATION.md  HIGH-LEVEL-DESIGN.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-STATUS.md  MCP-IMPLEMENTATION-COMPLETE.md  MCP-SERVER-TESTING.md  OTHER-PLATFORMS-INTEGRATION.md  QUICK-START.md  RAPID-PROTOTYPING.md  README.md  REQUIREMENTS.md  TASKS.md  TC-DRIFT-SCANNER.md  TC-SUBTEST-GUIDELINES.md  TEST-CASE-SELECTION-GUIDELINES.md  TEST-CASES.md  USER-STORIES.md  VECTOR-DATABASE-DRIFT-INTEGRATION.md  VECTOR-DATABASE-INTEGRATION.md  VERSION-MANAGEMENT.md  YAML-MIGRATION-SUMMARY.md
guidelines/: README.md  consistency-standards.yml
migrations/: README.md  config-template-migration.yml  test-cases-to-features.yml
passes/: 1 - Documentation & Planning Passes.md  2 - Synchronization & Implementation Passes.md  3 - Validation & Maintenance Passes.md  4 - Refinement & Cleanup Passes.md
passes.yml/: 0_requirements_pass.yml  10_reverse_pass.yml  1_foundation_pass.yml  2_documentation_pass.yml  3_development_pass.yml  4_implementation_pass.yml  4_testing_pass.yml  5_refactoring_pass.yml  5_testing_pass.yml  6_code_review_pass.yml  6_refactoring_pass.yml  7_code_review_pass.yml  7_prune_pass.yml  8_prune_pass.yml  8_synchronization_pass.yml  9_reverse_pass.yml  9_synchronization_pass.yml  README.md  full_pass.yml
procedures/: index.yml  rewrite_procedure.yml
procedures.yml/: README.md  common-patterns.yml  configuration.yml  core-patterns.yml  ddd_migration.yml  drift-scanning.yml  ft-tc-structure.yml  git-workflow.yml  index.yml  language-rules.yml  planning.yml  prune-pass.yml  quality.yml  repository.yml  rewrite_procedure.yml  standards.yml  templates.yml  test-case-guidelines.yml  version-management.yml
python_calculator/: README.md
rules/: go-review-guidelines.md  go.md  java-review-guidelines.md  java.md  javascript-review-guidelines.md  javascript.md  markdown-review-guidelines.md  markdown.md  python-review-guidelines.md  python.md
rules.yml/: README.md  go.yml  java.yml  javascript.yml  markdown.yml  python.yml
templates/: ACCEPTANCE-CRITERIA.template.md  ACCEPTANCE-CRITERIA.template.yml  ARCHITECTURE.template.md  BASE.template.md  BASE.template.yml  BUSINESS-OBJECTIVES.template.md  BUSINESS-OBJECTIVES.template.yml  CHANGELOG.template.md  CHANGELOG.template.yml  DDD-STATUS.template.md  DDD-STATUS.template.yml  DETAILED-DESIGN.template.md  DETAILED-DESIGN.template.yml  DRIFT-TRACKER.template.md  DUAL-MODE-PASS.template.yml  EXEC-PLAN.template.md  EXEC-PLAN.template.yml  FEATURE-module.template.md  FEATURE-module.template.yml  FEATURES.template.md  FEATURES.template.yml  HIGH-LEVEL-DESIGN.template.md  HIGH-LEVEL-DESIGN.template.yml  IMPLEMENTATION-PLAN.template.md  PASS-WORKFLOW.template.md  PROPOSAL.template.md  PROPOSAL.template.yml  README.md  README.template.md  README.template.yml  REQUIREMENTS.template.md  REQUIREMENTS.template.yml  TASKS.template.md  TASKS.template.md.backup.20250129T143000Z  TASKS.template.yml  TEST-CASES.template.md  USER-JOURNEY-MAP.template.md  USER-JOURNEY-MAP.template.yml  USER-STORIES.template.md  USER-STORIES.template.yml  (+5 more)
templates.yml/: README.md  agent3d-config.template.yml  migration.template.yml
tools/: mcp.sh  (+27 more)
(+179 files in other folders)
